# Server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  Dockerfile  Doxyfile  Project.xml  README.md  execStopPost.sh  installDependencies.sh  server017.service  sonar-project.properties
.github/workflows/: CI.yml  combine.yml  compile.yml  static-analysis.yml
exampleConfig/: characters.json  matchconfig.json  matchconfig.match  scenario.json  scenario.scenario
src/: Actions.hpp  CMakeLists.txt  Events.hpp  GameFSM.hpp  OperationHandling.cpp  OperationHandling.hpp  Server.cpp  Server.hpp  ServerExitException.hpp  ServerFSM.hpp  ServerUtil.cpp  ServerUtil.hpp  Util.cpp  Util.hpp  main.cpp
src/game/: ChoiceHandling.hpp  ChoicePhaseFSM.hpp  EquipChoiceHandling.hpp  GameFSM.hpp  Guards.hpp  OperationHandling.hpp
src/network/: MessageRouter.cpp  MessageRouter.hpp  MessageTypeTraits.hpp
src/util/: ChoiceSet.cpp  ChoiceSet.hpp  Format.hpp  Operation.cpp  Operation.hpp  Player.cpp  Player.hpp  Timer.cpp  Timer.hpp  UUIDNotFoundException.hpp  Util.cpp  Util.hpp
test/client/: CMakeLists.txt  main.cpp
